2005-05-06  Mikael Hallendal  <micke@imendio.com>

	* src/dh-gecko-utils.cpp: 
	- Fixed memory leak, bug #302866
	- Patch from Paolo Borelli

2005-04-14  Ray Strode  <rstrode@redhat.com>

	* src/dh-keyword-model.c: (keyword_model_get_iter),
	(keyword_model_get_path):
	- Fixes bug #166013
	- devhelp's keyword_model_get_path function was incorrectly determining
	  the index of the tree model iterator's node in a list

2005-04-06  Christian Persch  <chpe@cvs.gnome.org>

	* src/dh-gecko-utils.cpp:

	Fix for mozilla API change. Fixes bug #172820.

2005-04-05  Richard Hult  <richard@imendio.com>

	* src/bacon-message-connection.c: Update.

	* src/dh-main.c: (window_get_is_on_current_workspace),
	(window_present): Fix window presentation.
	(main): Set application name.
	* src/dh-window.c: Fix coding style.
	(window_activate_about): Fix the about box: Johan's email address,
	don't put up an empty documenters' tab.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-25  Mikael Hallendal  <micke@imendio.com>

	* src/dh-main.c: (devhelp_init_i18n), (main):
	- Setup i18n stuff which happened to get lost in the patch.

2005-03-25  Kristof Vansant  <de_lupus@pandora.be>

	reviewed by: Mikael Hallendal

	* autogen.sh:
	* configure.in:
	- Depend on GTK+ 2.6
	- Remove dependency on libgnome(ui).
	* src/dh-html.c:
	* src/dh-keyword-model.c:
	* src/dh-main.c: (main):
	* src/dh-parser.c:
	* src/dh-search.c:
	* src/dh-util.c: (dh_dot_dir):
	* src/dh-window.c: (window_activate_about):
	- Use GTK+ for about box instead of libgnomeui.
	- Fixed #167213.

2004-12-01  Mikael Hallendal  <micke@imendio.com>

	* src/dh-html.c: 
	(html_child_grab_focus_cb), (html_child_add_cb),
	(html_child_remove_cb), (html_init):
	- Patch from Tommi Komulainen to avoid the HTML widget from stealing
	  focus after loading a page (taken from Galeon).

2004-11-25  Christoffer Olsen  <co@deworks.net>

	* configure.in: Added devhelp.desktop.in to AC_OUTPUT