@@ -1,5 +1,5 @@
 EXTRA_DIST =                       \
           bulkman.pl               \
           CHM_HTB2devhelp.README   \
-          text2devhelp.sh          \
+          texi2devhelp.sh          \
           README
